[package]
name = "of"
version = "0.1.0"
edition = "2021"
authors = ["Guo Weikang <guoweikang.kernel@gmail.com>"]
description = "A pure-Rust #![no_std] crate for parsing Flattened Devicetrees"
license = "GPL-3.0-or-later OR Apache-2.0"
keywords = ["Starry"]

[dependencies]
fdt = "0.1.5"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
